--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
                     <ul class="nav">
                         <li><a href="index.html" class="links active">Home</a></li>
-                        <li><a href="" class="link">About</a></li>
-                        <li><a href="" class="link">Resume</a></li>
+                        <li><a href="#about" class="link">About</a></li>
+                        <li><a href="#resume" class="link">Resume</a></li>
                         <li><a href="" class="link">Services</a></li>
                         <li><a href="" class="link">Portfolio</a></li>
                         <li><a href="" class="link">Contact</a></li>
@@ -570,6 +570,9 @@
             </div>
         </div>
     </section>
+    <footer>
+
+    </footer>
 </body>
 <script src="./app.js">
 </script>
