--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                         <li><a href="index.html" class="links active">Home</a></li>
                         <li><a href="#about" class="link">About</a></li>
                         <li><a href="#resume" class="link">Resume</a></li>
-                        <li><a href="" class="link">Services</a></li>
-                        <li><a href="" class="link">Portfolio</a></li>
-                        <li><a href="" class="link">Contact</a></li>
+                        <li><a href="#service" class="link">Services</a></li>
+                        <li><a href="#portfolio" class="link">Portfolio</a></li>
+                        <li><a href="#contact" class="link">Contact</a></li>
                     </ul>
                     <div class="light-dark-toggle">
                         <i class="fa fa-toggle-on fa-2x" id="icon"></i>
