--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
                 </div>
                 <div class="third-row">
                     <div class="contact-form">
-                        <form action="">
+                        <form action="contact.php" method="post">
                             <div class="first-row">
                                 <input type="text" placeholder="Your Name">
                                 <input type="text" placeholder="Your Email">
@@ -562,7 +562,7 @@
                             <input type="text" placeholder="Subject">
                             <textarea name="message" id="" cols="30" rows="10" placeholder="Message"></textarea>
                             <div class="btn-con">
-                                <button class="btn">Send Message</button>
+                                <button class="btn" name="btn-send">Send Message</button>
                             </div>
                         </form>
                     </div>
