--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
                 </div>
                 <div class="third-row">
                     <div class="contact-form">
-                        <form action="contact.php" method="post" data-netlify="true">
+                        <form action="name" method="post" data-netlify="true" onsubmit="submit">
                             <div class="first-row">
                                 <input type="text" name="name" placeholder="Your Name">
                                 <input type="text" name="email" placeholder="Your Email">
