--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
                 </div>
                 <div class="third-row">
                     <div class="contact-form">
-                        <form action="name" method="post" data-netlify="true" onsubmit="submit">
+                        <form name="contact" method="post" data-netlify="true" onsubmit="submit">
                             <div class="first-row">
                                 <input type="text" name="name" placeholder="Your Name">
                                 <input type="text" name="email" placeholder="Your Email">
@@ -562,7 +562,7 @@
                             <input type="text" name="subject" placeholder="Subject">
                             <textarea name="message" id="" cols="30" rows="10" placeholder="Message"></textarea>
                             <div class="btn-con">
-                                <button class="btn" name="btn-send">Send Message</button>
+                                <button class="btn" type="submit" name="btn-send">Send Message</button>
                                 <span>Sending your message...</span>
                             </div>
                         </form>
