--- a/success.html
+++ b/success.html
@@ -15,12 +15,14 @@
 
 <body>
     <section class="modal">
-        <div>
+        <div class="container-modal">
             <div class="modal-main">
-                <h2>Thank you</h2>
+                <i class="fa fa-check-square"></i>
+                <h2>Thank you!</h2>
                 <p>Your form has been submitted</p>
+                <br>
                 <div>
-                    <a href="index.html">Back to home page</a>
+                    <a href="index.html">Continue</a>
                 </div>
               </div>
         </div>
