--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
                 </div>
                 <div class="third-row">
                     <div class="contact-form">
-                        <form name="contact" dat-netlify="true" action="./success.html" method="post">
+                        <form name="contact" data-netlify="true" action="success.html" method="post">
                             <div class="first-row">
                                 <input type="text" name="name" placeholder="Your Name" required>
                                 <input type="text" name="email" placeholder="Your Email" required>
