--- a/success.html
+++ b/success.html
@@ -11,10 +11,8 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-
-
 <body>
-    <section class="modal">
+    <section class="modal-form">
         <div class="container-modal">
             <div class="modal-main">
                 <i class="fa fa-check-square"></i>
