--- a/index.html
+++ b/index.html
@@ -536,7 +536,8 @@
                         <p><span>Category: </span> Web Design</p>
                         <p><span>Client: </span> Peronal Project</p>
                         <p><span>Project date: </span>17 October, 2023</p>
-                        <p><span>Project URL: </span><a>www.project.com</a></p>
+                        <p><span>Project URL: </span><a href="https://oluwabukolafasan.netlify.app/">My portfolio</a></p>
+                        <p><span>Github Link: </span><a href="https://github.com/Bookieblue/myportfolio" target="_blank">Source Code</a></p>
                         <br>
                         <br>
                         <p>Introducing my portfolio website, skillfully developed
