--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                     <div class="light-dark-toggle">
                         <i class="fa fa-toggle-on fa-2x" id="icon"></i>
                     </div>
+                    <i class="fa fa-times"></i>
                 </nav>
                 <div class="header">
-                    <i class="fa fa-bars fa-3x active" onclick="changeIcon(this)"></i>
-                    <!-- <i class="fa fa-times"></i> -->
+                    <i class="fa fa-bars fa-3x"></i>
                 </div>
             </div>
             <div class="socials">
@@ -242,41 +242,6 @@
                         </p>
                         <img src="./Assets/images/Clients-img/client-3.jpg" alt="black-woman" class="client-3">
 
-                    </div>
-                    <div class="slide">
-                        <p>Working with Bukola has been an absolute pleasure.
-                            Her keen eye for design and ability to turn our vision into a stunning website left us
-                            in
-                            awe.
-                        </p>
-                        <img src="./Assets/images/Clients-img/client-3.jpg" alt="black-woman" class="client-3">
-
-                    </div>
-                    <div class="slide">
-                        <p>Working with Bukola has been an absolute pleasure.
-                            Her keen eye for design and ability to turn our vision into a stunning website left us
-                            in
-                            awe.
-                         </p>
-                        <img src="./Assets/images/Clients-img/client-3.jpg" alt="black-woman" class="client-3">
-
-                    </div>
-                    <div class="slide">
-                        <p>Working with Bukola has been an absolute pleasure.
-                            Her keen eye for design and ability to turn our vision into a stunning website left us
-                            in
-                            awe.
-                        </p>
-                        <img src="./Assets/images/Clients-img/client-3.jpg" alt="black-woman" class="client-3">
-
-                    </div>
-                    <div class="navigation-visiblity">
-                        <div class="slide-icon"></div>
-                        <div class="slide-icon"></div>
-                        <div class="slide-icon"></div>
-                        <div class="slide-icon"></div>
-                        <div class="slide-icon"></div>
-                        <div class="slide-icon"></div>
                     </div>
                 </div>
             </div>
