--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
                          <p><span>Category: </span> Web Design</p>
                          <p><span>Client: </span> Peronal Project</p>
                          <p><span>Project date: </span>13th January, 2024</p>
-                         <p><span>Project URL: </span><a href="https://ear2.netlify.app/" target="_blank">Ear1 App Landing Page</a></p>
+                         <p><span>Project URL: </span><a href="https://ear2.netlify.app/" target="_blank">Ear1 App(Landing Page)</a></p>
                          <p><span>Github Link: </span><a href="https://github.com/Bookieblue/Ear1" target="_blank">Source Code</a></p>
                          <br>
                          <br>
@@ -505,12 +505,11 @@
                         <p><span>Github Link: </span><a href="https://github.com/Bookieblue/myportfolio" target="_blank">Source Code</a></p>
                         <br>
                         <br>
-                        <p>Introducing my portfolio website, skillfully developed
-                       using only HTML, CSS, and JavaScript. This project posed a challenge, pushing me
-                       to master the creation of tabs for seamless navigation between sections.the website includes
-                       a distinctive dark-mode feature, allowing users to easily toggle between dark and light modes. 
-                       This undertaking enhanced my proficiency in web development through hands-on experience with 
-                       these fundamental technologies.
+                        <p>Introducing my portfolio website, I made a portfolio website using only HTML, CSS, and JavaScript. 
+                            It was a bit challenging, especially when creating tabs for easy navigation
+                             between sections. The website has a cool dark mode that users can switch on 
+                             and off easily. Doing this project helped me get better at web development
+                              with these basic technologies.
                        </p>
                     </div>
                 </div>
@@ -543,8 +542,8 @@
                             <i class="fa fa-map-marker"></i>
                         </div>
                         <div class="address">
-                            <h3>My Address</h3>
-                            <p>Oke-ogba, Akure, Ondo State</p>
+                            <h3>My Location</h3>
+                            <p>Lagos, Nigeria</p>
                         </div>
                     </div>
                     <div class="contact-text">
@@ -585,7 +584,7 @@
                 <div class="third-row">
                     <div class="contact-form">
                         <form name="contact" data-netlify="true" action="success.html" method="post">
-                            <div class="first-row">
+                            <div class="first-row-1">
                                 <input type="text" name="name" placeholder="Your Name" required>
                                 <input type="text" name="email" placeholder="Your Email" required>
                             </div>
